@@ -53,7 +53,7 @@ typedef enum
 	S2S_CFG_ENABLE_UNIT_ATTENTION = 1,
 	S2S_CFG_ENABLE_PARITY = 2,
 	S2S_CFG_ENABLE_SCSI2 = 4,
-	// OBSOLETE S2S_CFG_DISABLE_GLITCH = 8,
+	S2S_CFG_DISABLE_GLITCH = 8,
 	S2S_CFG_ENABLE_CACHE = 16,
 	S2S_CFG_ENABLE_DISCONNECT = 32,
 	S2S_CFG_ENABLE_SEL_LATCH = 64,
@@ -203,7 +203,8 @@ typedef enum
 typedef enum
 {
 	S2S_CFG_STATUS_GOOD,
-	S2S_CFG_STATUS_ERR
+	S2S_CFG_STATUS_ERR,
+	S2S_CFG_STATUS_BUSY
 } S2S_CFG_STATUS;
 
 
